tests/invalid/parser/types.ri
extern (C) {
    fn malloc(sz: usize) *void;
    fn free(pointer: &void); // BAD
}

struct St {
    f1: &&i32;
    f2: *&i32;
    f3: &*i32; // OK

    f4: ?*u8;

    f5: (i32, i32, i32, i32, i32, i32, i32, i32, i32);

    f6: ??i32;

    f7: void;

    f8: pkg;
    f9: =;
}

fn main() { }
